add CertGenerator